--- a/content/publication/1995-bj/cite.bib
+++ b/content/publication/1995-bj/cite.bib
@@ -4,7 +4,7 @@
  author = {David A. Bader and Joseph JáJá},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ppopp/BaderJ95},
- booktitle = {Proceedings of the Fifth ACM SIGPLAN Symposium on Principles & Practice of Parallel Programming (PPOPP), Santa Barbara, CA, July 19--21, 1995},
+ booktitle = {Proceedings of the Fifth ACM SIGPLAN Symposium on Principles \& Practice of Parallel Programming (PPOPP), Santa Barbara, CA, July 19--21, 1995},
  doi = {10.1145/209936.209950},
  editor = {Ferrante, Jeanne},
  groups = {Edited},
