--- a/content/publication/2004-bc/cite.bib
+++ b/content/publication/2004-bc/cite.bib
@@ -11,7 +11,7 @@
  pages = {38},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {A Fast, Parallel Spanning Tree Algorithm for Symmetric Multiprocessors (SMPs)},
+ title = {A Fast, Parallel Spanning Tree Algorithm for Symmetric Multiprocessors ({SMPs})},
  url = {https://doi.org/10.1109/IPDPS.2004.1302951},
  year = {2004}
 }
