--- a/content/publication/2005-bc/cite.bib
+++ b/content/publication/2005-bc/cite.bib
@@ -15,7 +15,7 @@ The source code for these algorithms is freely-available from our web site.
  number = {9},
  pages = {994--1006},
  timestamp = {Wed, 14 Nov 2018 00:00:00 +0100},
- title = {A fast, parallel spanning tree algorithm for symmetric multiprocessors (SMPs)},
+ title = {A fast, parallel spanning tree algorithm for symmetric multiprocessors ({SMPs})},
  url = {https://doi.org/10.1016/j.jpdc.2005.03.011},
  volume = {65},
  year = {2005}
