--- a/content/publication/2005-bm/cite.bib
+++ b/content/publication/2005-bm/cite.bib
@@ -12,7 +12,7 @@
  pages = {465--476},
  publisher = {Berlin},
  timestamp = {Tue, 14 May 2019 10:00:50 +0200},
- title = {Design and Implementation of the HPCS Graph Analysis Benchmark on Symmetric Multiprocessors},
+ title = {Design and Implementation of the {HPCS Graph Analysis Benchmark} on Symmetric Multiprocessors},
  url = {https://link.springer.com/chapter/10.1007%2F11602569_48},
  year = {2005}
 }
