--- a/content/publication/2005-c-ba/cite.bib
+++ b/content/publication/2005-c-ba/cite.bib
@@ -10,7 +10,7 @@
  pages = {45},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 14 Nov 2018 00:00:00 +0100},
- title = {An Experimental Study of Parallel Biconnected Components Algorithms on Symmetric Multiprocessors (SMPs)},
+ title = {An Experimental Study of Parallel Biconnected Components Algorithms on Symmetric Multiprocessors ({SMPs})},
  url = {https://doi.org/10.1109/IPDPS.2005.100},
  year = {2005}
 }
