--- a/content/publication/2006-bm/cite.bib
+++ b/content/publication/2006-bm/cite.bib
@@ -10,7 +10,7 @@
  pages = {523--530},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 02 Nov 2018 00:00:00 +0100},
- title = {Designing Multithreaded Algorithms for Breadth-First Search and st-connectivity on the Cray MTA-2},
+ title = {Designing Multithreaded Algorithms for Breadth-First Search and st-connectivity on the {Cray MTA-2}},
  url = {https://doi.org/10.1109/ICPP.2006.34},
  year = {2006}
 }
