--- a/content/publication/2007-bam/cite.bib
+++ b/content/publication/2007-bam/cite.bib
@@ -10,7 +10,7 @@
  pages = {76},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 02 Nov 2018 00:00:00 +0100},
- title = {On the Design and Analysis of Irregular Algorithms on the Cell Processor: A Case Study of List Ranking},
+ title = {On the Design and Analysis of Irregular Algorithms on the {Cell} Processor: A Case Study of List Ranking},
  url = {https://doi.org/10.1109/IPDPS.2007.370266},
  year = {2007}
 }
