--- a/content/publication/2007-cb/cite.bib
+++ b/content/publication/2007-cb/cite.bib
@@ -11,7 +11,7 @@
  pages = {137--147},
  publisher = {Springer},
  timestamp = {Tue, 14 May 2019 10:00:40 +0200},
- title = {Techniques for Designing Efficient Parallel Graph Algorithms for SMPs and Multicore Processors},
+ title = {Techniques for Designing Efficient Parallel Graph Algorithms for {SMPs} and Multicore Processors},
  url = {https://doi.org/10.1007/978-3-540-74742-0_15},
  year = {2007}
 }
