--- a/content/publication/2007-mc-bc/cite.bib
+++ b/content/publication/2007-mc-bc/cite.bib
@@ -1,4 +1,4 @@
-@inbook{2007-McBC,
+@incollection{2007-McBC,
  abstract = {In this chapter, we consider the applicability of a non-traditional massively multithreaded architecture, the Cray MTA-2 [13], as a platform for graph algorithms. Graph-theoretic problems have emerged as a prominent computational workload in the petascale computing era, and are representative of fundamental kernels in biology, scientiﬁc computing, and applications in national security. However, they pose serious challenges on current parallel machines due to non-contiguous, concurrent accesses to global data structures with low degrees of locality [35]. We present multithreaded algorithms 
 for two fundamental graph problems – single source shortest paths and connected components – that are designed for processing large-scale, unstructured graph instances.},
  address = {New York},
@@ -9,7 +9,7 @@ for two fundamental graph problems – single source shortest paths and connecte
  editor = {David A. Bader},
  groups = {Edited},
  pages = {1--26},
- publisher = {Chapman & Hall},
+ publisher = {Chapman \& Hall},
  title = {Multithreaded Algorithms for Processing Massive Graphs},
  url = {https://doi.org/10.1201/9781584889106},
  year = {2007}
