--- a/content/publication/2010-bamp/cite.bib
+++ b/content/publication/2010-bamp/cite.bib
@@ -12,7 +12,7 @@
  pages = {195--216},
  publisher = {CRC Press},
  timestamp = {Thu, 18 Jul 2019 14:41:08 +0200},
- title = {Combinatorial Algorithm Design on the Cell/B.E. Processor},
+ title = {Combinatorial Algorithm Design on the {Cell/B.E.} Processor},
  url = {https://doi.org/10.1201/b10376},
  year = {2010}
 }
