--- a/content/publication/2010-ejr/cite.bib
+++ b/content/publication/2010-ejr/cite.bib
@@ -10,7 +10,7 @@
  pages = {583--593},
  publisher = {IEEE Computer Society},
  timestamp = {Sun, 04 Jun 2017 01:00:00 +0200},
- title = {Massive Social Network Analysis: Mining Twitter for Social Good},
+ title = {Massive Social Network Analysis: Mining {Twitter} for Social Good},
  url = {https://doi.org/10.1109/ICPP.2010.66},
  year = {2010}
 }
