--- a/content/publication/2010-kb/cite.bib
+++ b/content/publication/2010-kb/cite.bib
@@ -11,7 +11,7 @@
  pages = {1--8},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {Large scale complex network analysis using the hybrid combination of a MapReduce cluster and a highly multithreaded system},
+ title = {Large scale complex network analysis using the hybrid combination of a {MapReduce} cluster and a highly multithreaded system},
  url = {https://doi.org/10.1109/IPDPSW.2010.5470691},
  year = {2010}
 }
