--- a/content/publication/2012-gm-ba/cite.bib
+++ b/content/publication/2012-gm-ba/cite.bib
@@ -18,7 +18,7 @@ In this paper, we present an algorithm that partitions the workload equally amon
  pages = {331--340},
  publisher = {ACM},
  series = {ICS '12},
- title = {GPU Merge Path: A GPU Merging Algorithm},
+ title = {{GPU} Merge Path: A {GPU} Merging Algorithm},
  url = {http://doi.acm.org/10.1145/2304576.2304621},
  year = {2012}
 }
