--- a/content/publication/2012-rbm/cite.bib
+++ b/content/publication/2012-rbm/cite.bib
@@ -4,10 +4,9 @@
  author = {E. Jason Riedy and David A. Bader and Henning Meyerhenke},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ipps/RiedyBM12},
- booktitle = {26th IEEE International Parallel and Distributed Processing Symposium Workshops & PhD Forum, IPDPS 2012, Shanghai, China, May 21-25, 2012},
+ booktitle = {26th IEEE International Parallel and Distributed Processing Symposium Workshops \& PhD Forum, IPDPS 2012, Shanghai, China, May 21-25, 2012},
  doi = {10.1109/IPDPSW.2012.203},
  groups = {Edited},
- note = {9 papers accepted out of 15 papers submitted},
  pages = {1619--1628},
  publisher = {IEEE Computer Society},
  timestamp = {Sun, 04 Jun 2017 01:00:00 +0200},
