--- a/content/publication/2013-ejrb/cite.bib
+++ b/content/publication/2013-ejrb/cite.bib
@@ -5,11 +5,11 @@
  biburl = {https://dblp.org/rec/bib/journals/tpds/EdigerJRB13},
  doi = {10.1109/TPDS.2012.323},
  groups = {Edited},
- journal = {IEEE Transactions on Parallel & Distributed Systems},
+ journal = {IEEE Transactions on Parallel \& Distributed Systems},
  number = {11},
  pages = {2220--2229},
  timestamp = {Fri, 09 Jun 2017 01:00:00 +0200},
- title = {GraphCT: Multithreaded Algorithms for Massive Graph Analysis},
+ title = {{GraphCT}: Multithreaded Algorithms for Massive Graph Analysis},
  url = {https://doi.org/10.1109/TPDS.2012.323},
  volume = {24},
  year = {2013}
