--- a/content/publication/2013-rb/cite.bib
+++ b/content/publication/2013-rb/cite.bib
@@ -4,10 +4,9 @@
  author = {E. Jason Riedy and David A. Bader},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ipps/RiedyB13},
- booktitle = {2013 IEEE International Symposium on Parallel & Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
+ booktitle = {2013 IEEE International Symposium on Parallel \& Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
  doi = {10.1109/IPDPSW.2013.229},
  groups = {Edited},
- note = {11 papers accepted out of 16 papers submitted},
  pages = {1646--1655},
  publisher = {IEEE Computer Society},
  timestamp = {Sun, 04 Jun 2017 01:00:00 +0200},
