--- a/content/publication/2014-m-ba/cite.bib
+++ b/content/publication/2014-m-ba/cite.bib
@@ -11,7 +11,7 @@
  pages = {572--583},
  publisher = {IEEE Computer Society},
  timestamp = {Mon, 21 Aug 2017 16:43:27 +0200},
- title = {Scalable and High Performance Betweenness Centrality on the GPU},
+ title = {Scalable and High Performance Betweenness Centrality on the {GPU}},
  url = {https://doi.org/10.1109/SC.2014.52},
  year = {2014}
 }
