--- a/content/publication/2014-mrb/cite.bib
+++ b/content/publication/2014-mrb/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--6},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 02 Jun 2017 01:00:00 +0200},
- title = {Optimizing energy consumption and parallel performance for static and dynamic betweenness centrality using GPUs},
+ title = {Optimizing energy consumption and parallel performance for static and dynamic betweenness centrality using {GPUs}},
  url = {https://doi.org/10.1109/HPEC.2014.7040980},
  year = {2014}
 }
