--- a/content/publication/2015-kbb/cite.bib
+++ b/content/publication/2015-kbb/cite.bib
@@ -8,7 +8,7 @@
  keywords = {graphs, algorithms, matrices, linear algebra, software standards},
  note = {International Conference On Computational Science, ICCS 2015},
  pages = {2453--2462},
- title = {Graphs, Matrices, and the GraphBLAS: Seven Good Reasons},
+ title = {Graphs, Matrices, and the {GraphBLAS}: Seven Good Reasons},
  url = {https://doi.org/10.1016/j.procs.2015.05.353},
  volume = {51},
  year = {2015}
