--- a/content/publication/2016-kab/cite.bib
+++ b/content/publication/2016-kab/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--9},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {Mathematical foundations of the GraphBLAS},
+ title = {Mathematical foundations of the {GraphBLAS}},
  url = {https://doi.org/10.1109/HPEC.2016.7761646},
  year = {2016}
 }
