--- a/content/publication/2017-nsf/cite.bib
+++ b/content/publication/2017-nsf/cite.bib
@@ -8,7 +8,7 @@
  keywords = {graphs, data analysis, numerical accuracy, katz centrality, ranking},
  note = {International Conference on Computational Science, ICCS 2017, 12-14 June 2017, Zurich, Switzerland},
  pages = {68--78},
- title = {Graph Ranking Guarantees for Numerical Approximations to Katz Centrality},
+ title = {Graph Ranking Guarantees for Numerical Approximations to {Katz} Centrality},
  url = {http://www.sciencedirect.com/science/article/pii/S1877050917305227},
  volume = {108},
  year = {2017}
