--- a/content/publication/2017-zls/cite.bib
+++ b/content/publication/2017-zls/cite.bib
@@ -11,7 +11,7 @@
  pages = {1--6},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 02 Nov 2018 00:00:00 +0100},
- title = {Design and implementation of parallel PageRank on multicore platforms},
+ title = {Design and implementation of parallel {PageRank} on multicore platforms},
  url = {https://doi.org/10.1109/HPEC.2017.8091048},
  year = {2017}
 }
