--- a/content/publication/2018-bad/cite.bib
+++ b/content/publication/2018-bad/cite.bib
@@ -11,7 +11,7 @@
  pages = {193},
  publisher = {ACM},
  timestamp = {Wed, 21 Nov 2018 12:44:27 +0100},
- title = {Massive-scale Streaming Analytics: Models, Parallelism, & Real-world Applications},
+ title = {Massive-scale Streaming Analytics: Models, Parallelism, \& Real-world Applications},
  url = {https://doi.org/10.1145/3210377.3210379},
  year = {2018}
 }
