--- a/content/publication/2018-bgbb/cite.bib
+++ b/content/publication/2018-bgbb/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--7},
  publisher = {IEEE Computer Society},
  timestamp = {Sat, 08 Dec 2018 18:44:03 +0100},
- title = {Hornet: An Efficient Data Structure for Dynamic Sparse Graphs and Matrices on GPUs},
+ title = {Hornet: An Efficient Data Structure for Dynamic Sparse Graphs and Matrices on {GPUs}},
  url = {https://doi.org/10.1109/HPEC.2018.8547541},
  year = {2018}
 }
