--- a/content/publication/2018-mb/cite.bib
+++ b/content/publication/2018-mb/cite.bib
@@ -9,7 +9,7 @@
  number = {8},
  pages = {85--92},
  timestamp = {Wed, 21 Nov 2018 00:00:00 +0100},
- title = {Accelerating GPU betweenness centrality},
+ title = {Accelerating {GPU} betweenness centrality},
  url = {https://doi.org/10.1145/3230485},
  volume = {61},
  year = {2018}
