--- a/content/publication/2020-gkskb/cite.bib
+++ b/content/publication/2020-gkskb/cite.bib
@@ -3,7 +3,7 @@
   title     = {Traversing Large Graphs on {GPUs} with Unified Memory},
   journal   = {Proc.\ of the VLDB Endowment},
   volume    = {13},
-  number    = {7}
+  number    = {7},
   pages     = {1119--1133},
   year      = {2020},
   url       = {https://www.vldb.org/pvldb/vol13.html},
