--- a/content/publication/2020-hbg/cite.bib
+++ b/content/publication/2020-hbg/cite.bib
@@ -2,7 +2,7 @@
  author = {Todd Hricik and David A. Bader and Oded Green},
  booktitle = {The 24th Annual IEEE High Performance Extreme Computing Conference (HPEC), Waltham, MA, September 22-24, 2020},
  groups = {Edited},
- title = {Using RAPIDS AI to Accelerate Graph Data Science Workflows},
+ title = {Using {RAPIDS AI} to Accelerate Graph Data Science Workflows},
  year = {2020},
  url       = {https://ieeexplore.ieee.org/document/9286224},
  doi={10.1109/HPEC43674.2020.9286224},
