--- a/content/publication/2004-c-ba/cite.bib
+++ b/content/publication/2004-c-ba/cite.bib
@@ -10,7 +10,7 @@
  pages = {448--457},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 19 May 2017 01:00:00 +0200},
- title = {The Euler Tour Technique and Parallel Rooted Spanning Tree},
+ title = {The {Euler} Tour Technique and Parallel Rooted Spanning Tree},
  url = {https://doi.org/10.1109/ICPP.2004.1327954},
  year = {2004}
 }
