--- a/content/publication/2007-bamk/cite.bib
+++ b/content/publication/2007-bamk/cite.bib
@@ -13,7 +13,7 @@ Our second case study, zlib, is a data compression/decompression library that is
  number = {10-11},
  pages = {720--740},
  timestamp = {Fri, 30 Nov 2018 00:00:00 +0100},
- title = {High performance combinatorial algorithm design on the Cell Broadband Engine processor},
+ title = {High performance combinatorial algorithm design on the {Cell Broadband Engine} processor},
  url = {https://doi.org/10.1016/j.parco.2007.09.005},
  volume = {33},
  year = {2007}
