--- a/content/publication/2010-dylb/cite.bib
+++ b/content/publication/2010-dylb/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{2010-DYLB,
  abstract = {The accuracy of Conditional Random Fields (CRF) is achieved at the cost of huge amount of computation to train model. In this paper we designed the parallelized algorithm for the Gradient Ascent based CRF training methods for biological sequence alignment. Our contribution is mainly on two aspects: 1) We flexibly parallelized the different iterative computation patterns, and the according optimization methods are presented. 2) As for the Gibbs Sampling based training method, we designed a way to automatically predict the iteration round, so that the parallel algorithm could be run in a more efficient manner. In the experiment, these parallel algorithms achieved valuable accelerations comparing to the serial version.},
  address = {Los Alamitos, CA},
- author = {Z. Du and Z. Yin and W. Liu and D. Bader},
+ author = {Zhihui Du and Zhaoming Yin and Wenjie Liu and David A. Bader},
  booktitle = {2010 IEEE International Conference on Bioinformatics and Biomedicine Workshops (BIBMW)},
  doi = {10.1109/BIBMW.2010.5703859},
  groups = {Edited},
