--- a/content/publication/2012-emrb/cite.bib
+++ b/content/publication/2012-emrb/cite.bib
@@ -11,7 +11,7 @@
  pages = {1--5},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 02 Jun 2017 01:00:00 +0200},
- title = {STINGER: High performance data structure for streaming graphs},
+ title = {{STINGER}: High performance data structure for streaming graphs},
  url = {https://doi.org/10.1109/HPEC.2012.6408680},
  year = {2012}
 }
