--- a/content/publication/2013-bmsw/cite.bib
+++ b/content/publication/2013-bmsw/cite.bib
@@ -1,9 +1,9 @@
-@misc{2013-BMSW,
+@book{2013-BMSW,
  address = {New York},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/dimacs/2012},
  doi = {10.1090/conm/588},
- editor = {David A. Bader and Henning Meyerhenke and Peter Sanders and Dorothea Wagner},
+ author = {David A. Bader and Henning Meyerhenke and Peter Sanders and Dorothea Wagner},
  groups = {Edited},
  isbn = {978-0-8218-9038-7},
  publisher = {American Mathematical Society},
