--- a/content/publication/2013-e-ba/cite.bib
+++ b/content/publication/2013-e-ba/cite.bib
@@ -4,7 +4,7 @@
  author = {David Ediger and David A. Bader},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ipps/EdigerB13a},
- booktitle = {2013 IEEE International Symposium on Parallel & Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
+ booktitle = {2013 IEEE International Symposium on Parallel \& Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
  doi = {10.1109/IPDPSW.2013.172},
  groups = {Edited},
  pages = {2262--2265},
