--- a/content/publication/2013-eb/cite.bib
+++ b/content/publication/2013-eb/cite.bib
@@ -4,14 +4,14 @@
  author = {David Ediger and David A. Bader},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ipps/EdigerB13},
- booktitle = {2013 IEEE International Symposium on Parallel & Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
+ booktitle = {2013 IEEE International Symposium on Parallel \& Distributed Processing, Workshops and Phd Forum, Cambridge, MA, USA, May 20-24, 2013},
  doi = {10.1109/IPDPSW.2013.107},
  groups = {Edited},
  note = {11 papers accepted out of 16 papers submitted},
  pages = {1638--1645},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {Investigating Graph Algorithms in the BSP Model on the Cray XMT},
+ title = {Investigating Graph Algorithms in the {BSP} Model on the {Cray XMT}},
  url = {https://doi.org/10.1109/IPDPSW.2013.107},
  year = {2013}
 }
