--- a/content/publication/2013-rme-ba/cite.bib
+++ b/content/publication/2013-rme-ba/cite.bib
@@ -1,4 +1,4 @@
-@inbook{2013-RMEBa,
+@incollection{2013-RMEBa,
  abstract = {Tackling the current volume of graph-structured data requires parallel tools. We extend our work on analyzing such massive graph data with a massively parallel algorithm for community detection that scales to current data sizes, clustering a real-world graph of over 100 million vertices and over 3 billion edges in under 500 seconds on a four-processor Intel E7-8870-based server. Our algorithm achieves moderate parallel scalability without sacrificing sequential operational complexity. Community detection partitions a graph into subgraphs more densely connected within the subgraph than to the rest of the graph. We take an agglomerative approach similar to Clauset, Newman, and Moore’s sequential algorithm, merging pairs of connected intermediate subgraphs to optimize different graph properties. Working in parallel opens new approaches to high performance. We improve performance of our parallel community detection algorithm on both the Cray XMT2 and OpenMP platforms and adapt our algorithm to the DIMACS Implementation Challenge data set.},
  address = {Providence, RI},
  author = {E. Jason Riedy and Henning Meyerhenke and David Ediger and David A. Bader},
