--- a/content/publication/2014-mb/cite.bib
+++ b/content/publication/2014-mb/cite.bib
@@ -4,13 +4,13 @@
  author = {Adam McLaughlin and David A. Bader},
  bibsource = {dblp computer science bibliography, https://dblp.org},
  biburl = {https://dblp.org/rec/bib/conf/ipps/McLaughlinB14},
- booktitle = {2014 IEEE International Parallel & Distributed Processing Symposium Workshops, Phoenix, AZ, USA, May 19-23, 2014},
+ booktitle = {2014 IEEE International Parallel \& Distributed Processing Symposium Workshops, Phoenix, AZ, USA, May 19-23, 2014},
  doi = {10.1109/IPDPSW.2014.157},
  groups = {Edited},
  pages = {1396--1406},
  publisher = {ACM},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {Revisiting Edge and Node Parallelism for Dynamic GPU Graph Analytics},
+ title = {Revisiting Edge and Node Parallelism for Dynamic {GPU} Graph Analytics},
  url = {https://doi.org/10.1109/IPDPSW.2014.157},
  year = {2014}
 }
