--- a/content/publication/2016-gb/cite.bib
+++ b/content/publication/2016-gb/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--6},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {cuSTINGER: Supporting dynamic graph algorithms for GPUs},
+ title = {{cuSTINGER}: Supporting dynamic graph algorithms for {GPUs}},
  url = {https://doi.org/10.1109/HPEC.2016.7761622},
  year = {2016}
 }
