--- a/content/publication/2017-n-ba/cite.bib
+++ b/content/publication/2017-n-ba/cite.bib
@@ -11,7 +11,7 @@
  pages = {290--302},
  publisher = {Springer},
  timestamp = {Tue, 14 May 2019 10:00:45 +0200},
- title = {Approximating Personalized Katz Centrality in Dynamic Graphs},
+ title = {Approximating Personalized {Katz} Centrality in Dynamic Graphs},
  url = {https://doi.org/10.1007/978-3-319-78024-5_26},
  year = {2017}
 }
