--- a/content/publication/2018-fgg/cite.bib
+++ b/content/publication/2018-fgg/cite.bib
@@ -11,7 +11,7 @@
  pages = {1--7},
  publisher = {IEEE Computer Society},
  timestamp = {Sat, 08 Dec 2018 18:44:03 +0100},
- title = {Fast and Adaptive List Intersections on the GPU},
+ title = {Fast and Adaptive List Intersections on the {GPU}},
  url = {https://doi.org/10.1109/HPEC.2018.8547759},
  year = {2018}
 }
