--- a/content/publication/2018-nb/cite.bib
+++ b/content/publication/2018-nb/cite.bib
@@ -9,7 +9,7 @@
  number = {1},
  pages = {26},
  timestamp = {Tue, 10 Apr 2018 01:00:00 +0200},
- title = {Incrementally updating Katz centrality in dynamic graphs},
+ title = {Incrementally updating {Katz} centrality in dynamic graphs},
  url = {https://doi.org/10.1007/s13278-018-0504-3},
  volume = {8},
  year = {2018}
