--- a/content/publication/2018-nfb/cite.bib
+++ b/content/publication/2018-nfb/cite.bib
@@ -2,7 +2,7 @@
  abstract = {Many large datasets from several fields of research such as biology or society can be represented as graphs. Additionally in many real applications, data is constantly being produced, leading to the notion of dynamic graphs. A heavily studied problem is identification of the most important vertices in a graph. This can be done using centrality measures, where a centrality metric computes a numerical value for each vertex in the graph. In this work we focus on centrality scores obtained from the computation of the matrix exponential. Specifically, we present a new dynamic algorithm for updating exponential centrality-based values of vertices in evolving graphs. We show that our method is faster than pure static recomputation, obtaining about 16\$\$\backslashtimes \$\$×speedup in real-world networks while maintaining a high quality of recall of the top ranked vertices in graphs. Moreover, we do not see a deterioration of the quality of our algorithm over time as more data is inserted into the graph.},
  address = {Cham},
  author = {Nathan, Eisha and Fairbanks, James and Bader, David},
- booktitle = {Complex Networks & Their Applications VI},
+ booktitle = {Complex Networks \& Their Applications VI},
  doi = {10.1007/978-3-319-72150-7_31},
  editor = {Cherifi, Chantal and Cherifi, Hocine and Karsai, Márton and Musolesi, Mirco},
  groups = {Edited},
