--- a/content/publication/2018-vd-gbg/cite.bib
+++ b/content/publication/2018-vd-gbg/cite.bib
@@ -11,7 +11,7 @@
  pages = {42:1--14},
  publisher = {Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
  timestamp = {Thu, 02 May 2019 17:40:11 +0200},
- title = {Scalable Katz Ranking Computation in Large Static and Dynamic Graphs},
+ title = {Scalable {Katz} Ranking Computation in Large Static and Dynamic Graphs},
  url = {https://doi.org/10.4230/LIPIcs.ESA.2018.42},
  year = {2018}
 }
