Added news post and fixed some typos

--- a/content/publication/2008-alb/cite.bib
+++ b/content/publication/2008-alb/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--12},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {Financial modeling on the cell broadband engine},
+ title = {Financial modeling on the {Cell Broadband Engine}},
  url = {https://doi.org/10.1109/IPDPS.2008.4536320},
  year = {2008}
 }
