--- a/content/publication/2008-b-pa/cite.bib
+++ b/content/publication/2008-b-pa/cite.bib
@@ -10,7 +10,7 @@
  pages = {1--10},
  publisher = {IEEE Computer Society},
  timestamp = {Wed, 24 May 2017 01:00:00 +0200},
- title = {High performance MPEG-2 software decoder on the cell broadband engine},
+ title = {High performance {MPEG-2} software decoder on the {Cell Broadband Engine}},
  url = {https://doi.org/10.1109/IPDPS.2008.4536234},
  year = {2008}
 }
