--- a/content/publication/2010-ydb/cite.bib
+++ b/content/publication/2010-ydb/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{2010-YDB,
- author = {Y. Ye and Z. Du and D.A. Bader},
+ author = {Yin Ye and Zhihui Du and David A. Bader},
  booktitle = {Annual International Conference on Advances in Distributed and Parallel Computing (ADPC 2010), Singapore, November 1-2, 2010},
  groups = {Edited},
  title = {GPUMemSort: A High Performance Graphic Co-processors Sorting Algorithm for Large Scale In-Memory Data},
