--- a/content/publication/2007-ba/cite.bib
+++ b/content/publication/2007-ba/cite.bib
@@ -11,7 +11,7 @@
  pages = {172--184},
  publisher = {Springer},
  timestamp = {Tue, 14 May 2019 10:00:50 +0200},
- title = {FFTC: Fastest Fourier Transform for the IBM Cell Broadband Engine},
+ title = {{FFTC}: Fastest {Fourier} Transform for the {IBM Cell Broadband Engine}},
  url = {https://doi.org/10.1007/978-3-540-77220-0_19},
  year = {2007}
 }
