--- a/content/publication/2008-bca/cite.bib
+++ b/content/publication/2008-bca/cite.bib
@@ -10,7 +10,7 @@
  pages = {520--527},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 19 May 2017 01:00:00 +0200},
- title = {On the Design of Fast Pseudo-Random Number Generators for the Cell Broadband Engine and an Application to Risk Analysis},
+ title = {On the Design of Fast Pseudo-Random Number Generators for the {Cell Broadband Engine} and an Application to Risk Analysis},
  url = {https://doi.org/10.1109/ICPP.2008.41},
  year = {2008}
 }
