--- a/content/publication/2009-bak/cite.bib
+++ b/content/publication/2009-bak/cite.bib
@@ -11,7 +11,7 @@ We design an efficient parallel implementation of Fast Fourier Transform (FFT) t
  number = {3},
  pages = {119--137},
  timestamp = {Sat, 27 May 2017 01:00:00 +0200},
- title = {Computing discrete transforms on the Cell Broadband Engine},
+ title = {Computing discrete transforms on the {Cell Broadband Engine}},
  url = {https://doi.org/10.1016/j.parco.2008.12.007},
  volume = {35},
  year = {2009}
