--- a/content/publication/2010-skb/cite.bib
+++ b/content/publication/2010-skb/cite.bib
@@ -8,7 +8,7 @@
  groups = {Edited},
  pages = {3793--3796},
  timestamp = {Fri, 26 May 2017 01:00:00 +0200},
- title = {Evaluating Cell/B.E software cache for ClustalW},
+ title = {Evaluating {Cell/B.E.} software cache for {ClustalW}},
  url = {https://doi.org/10.1109/ISCAS.2010.5537720},
  year = {2010}
 }
