--- a/content/publication/2011-ldx/cite.bib
+++ b/content/publication/2011-ldx/cite.bib
@@ -10,7 +10,7 @@
  pages = {82--92},
  publisher = {IEEE Computer Society},
  timestamp = {Sun, 04 Jun 2017 01:00:00 +0200},
- title = {A Waterfall Model to Achieve Energy Efficient Tasks Mapping for Large Scale GPU Clusters},
+ title = {A Waterfall Model to Achieve Energy Efficient Tasks Mapping for Large Scale {GPU} Clusters},
  url = {https://doi.org/10.1109/IPDPS.2011.129},
  year = {2011}
 }
