--- a/content/publication/2008-kb/cite.bib
+++ b/content/publication/2008-kb/cite.bib
@@ -10,7 +10,7 @@
  pages = {83--90},
  publisher = {IEEE Computer Society},
  timestamp = {Fri, 19 May 2017 01:00:00 +0200},
- title = {Optimizing JPEG2000 Still Image Encoding on the Cell Broadband Engine},
+ title = {Optimizing {JPEG2000} Still Image Encoding on the {Cell Broadband Engine}},
  url = {https://doi.org/10.1109/ICPP.2008.39},
  year = {2008}
 }
