--- a/content/publication/2010-ab/cite.bib
+++ b/content/publication/2010-ab/cite.bib
@@ -13,7 +13,7 @@
  pages = {151--170},
  publisher = {CRC Press},
  timestamp = {Thu, 18 Jul 2019 14:41:08 +0200},
- title = {Designing Fast Fourier Transform for the IBM Cell Broadband Engine},
+ title = {Designing Fast {Fourier} Transform for the {IBM Cell Broadband Engine}},
  url = {https://doi.org/10.1201/b10376},
  year = {2010}
 }
