--- a/content/publication/2021-b/cite.bib
+++ b/content/publication/2021-b/cite.bib
@@ -5,6 +5,7 @@ JOURNAL = {IEEE Annals on the History of Computing},
 VOLUME = {43},
 YEAR = {2021},
 NUMBER = {3},
+PAGES = {73-80},
 ISSN = {1058-6180},
 ABSTRACT = {In the 1990s I designed and built the first Linux supercomputer that remains the foundational infrastructure of today’s Linux supercomputers, including the fastest machines in the world. The ease of use of Linux supercomputers has had a profound impact on how scientists conduct their research and on the most pressing issues of our time, and I am proud of my role in this revolution in computing and discovery. Whether they are simulating astrophysical phenomena, impacts of climate change, or biological functions at the cellular level, Linux supercomputers are today’s primary tool of knowledge discovery.  Here I present my development of the first bona fide Linux supercomputer.  Today, researchers are building a new generation of exascale computing systems – machines capable of calculating at least one quintillion floating point operations per second. The Linux operating system is intrinsic to this effort because it provides the scale and flexibility to support high-performance computing at the exascale level.},
 DOI = {10.1109/MAHC.2021.3101415}
