--- a/content/publication/2021-gdw/cite.bib
+++ b/content/publication/2021-gdw/cite.bib
@@ -2,10 +2,10 @@
 author = {Goenawan, Ivan Hendy and Du, Zhihui and Wu, Chao and Sun, Yankui and Wei, Jianyan and Bader, David A.},
 title = {Dynamics signature based anomaly detection},
 journal = {Software: Practice and Experience},
-volume = {},
-number = {},
-pages = {},
-year = {2021},
+volume = {53},
+number = {1},
+pages = {160--175},
+year = {2023},
 keywords = {anomaly detection, dynamics features, gravitational microlensing, periodic variable stars, time series},
 doi = {https://doi.org/10.1002/spe.3052},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/spe.3052},
