Updated HiPC 2022 paper

--- a/content/publication/2022-dprb/cite.bib
+++ b/content/publication/2022-dprb/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{2022-DPRB,
- author = {Zhihui Du and Joseph Patchett and Oliver Alvarado Rodriguez and David A. Bader},
+ author = {Zhihui Du and Joseph Patchett and Oliver Alvarado Rodriguez and Fuhuan Li and David A. Bader},
  booktitle = {The 29th IEEE International Conference on  High Performance Computing, Data, and Analytics (HiPC), India, December 18-21, 2022.},
  groups = {Edited},
  title = {High-Performance Truss Analysis in {Arkouda}},
