Updated HPEC paper

--- a/content/publication/2022-rdplb/cite.bib
+++ b/content/publication/2022-rdplb/cite.bib
@@ -5,7 +5,7 @@
  title = {{Arachne}: An {Arkouda} Package for Large-Scale Graph Analytics},
  year = {2022},
  url       = {},
- doi={},
+ doi={10.1109/HPEC55821.2022.9991947},
  abstract = {Due to the emergence of massive real-world graphs,
 whose sizes may extend to terabytes, new tools must be developed
 to enable data scientists to handle such graphs efficiently. These
