Update JGAA paper

--- a/content/publication/2022-bb/cite.bib
+++ b/content/publication/2022-bb/cite.bib
@@ -2,10 +2,10 @@
 author = {David A. Bader and Paul Burkhardt},
 title = {A Simple and Efficient Algorithm for Finding Minimum Spanning Tree Replacement Edges},
 year = {2022},
-volume = {},
-number = {},
-pages = {},
-doi = {},
+volume = {26},
+number = {4},
+pages = {595--606},
+doi = {10.7155/jgaa.00609},
 abstract = {Given an undirected, weighted graph, the minimum spanning tree (MST)is a tree that connects all of the vertices of the graph with minimum sum of edge weights. In real world applications, network designers often seek to quickly find a replacement edge for each edge in the MST. For example, when a traffic accident closes a road in a transportation network, or a line goes down in a communication network, the replacement edge may reconnect the MST at lowest cost. In the paper, we consider the case of finding the lowest cost replacement edge for each edge of the MST. A previous algorithm by Tarjan takes O{m \alpha(m, n)} time and space, where $\alpha(m, n)$ is the inverse Ackermann's function. Given the MST and sorted non-tree edges, our algorithm is the first practical algorithm that runs in O(m+n) time and O(m+n) space to find all replacement edges. Additionally, since the most vital edge is the tree edge whose removal causes the highest cost, our algorithm finds it in linear time.},
 journal = {Journal of Graph Algorithms and Applications},
 }
