--- a/content/publication/2022-ydmzhb/cite.bib
+++ b/content/publication/2022-ydmzhb/cite.bib
@@ -2,10 +2,10 @@
 author={Yang, Chen and Du, Zhihui and Meng, Xiaofeng and Zhang, Xukang and Hao, Xinli and Bader, David A},
 journal={IEEE Transactions on Big Data},
 title={Anomaly Detection in Catalog Streams},
-year={2022},
-volume={},
-number={},
-pages={1-1},
+year={2023},
+volume={9},
+number={1},
+pages={294--311},
 doi={10.1109/TBDATA.2022.3161925},
 abstract={Detecting anomalies with high accuracy and real time from
 large amounts of streaming data is a challenge for many real-world
