--- a/content/publication/2022-dzb/cite.bib
+++ b/content/publication/2022-dzb/cite.bib
@@ -5,6 +5,7 @@
  booktitle = {Parallel Processing and Applied Mathematics - 14th International Conference, PPAM 2022, Gdansk, Poland, September 11-14, 2022},
  groups = {Edited},
  title = {Parallel Suffix Sorting for Large String Analytics},
- year = {2022}
+ year = {2022},
+ note = {In R. Wyrzykowski et al. (Eds.): PPAM 2022, LNCS 13826, pp. 71–82, 2023.}
 }
 
