Updates to DOIs and cites

--- a/content/publication/2009-abda/cite.bib
+++ b/content/publication/2009-abda/cite.bib
@@ -4,6 +4,7 @@
  groups = {Edited},
  note = {Best Paper Award},
  title = {Faster FAST: Multicore Acceleration of Streaming Financial Data},
+ doi = {10.1007/s00450-009-0093-5},
  year = {2009}
 }
 
