--- a/content/publication/2021-sbdkmmw/cite.bib
+++ b/content/publication/2021-sbdkmmw/cite.bib
@@ -4,8 +4,8 @@
  groups = {Edited},
  title = {{LAGraph}: Linear Algebra, Network Analysis Libraries, and the Study of Graph Algorithms},
  year = {2021},
- url       = {},
- doi={},
+ url  = {},
+ doi = {10.1109/IPDPSW52791.2021.00046},
  abstract = {Graph algorithms can be expressed in terms of
 linear algebra. GraphBLAS is a library of low-level building
 blocks for such algorithms that targets algorithm \emph{developers}.
