--- a/content/publication/2022-dprb/cite.bib
+++ b/content/publication/2022-dprb/cite.bib
@@ -5,7 +5,7 @@
  title = {High-Performance Truss Analysis in {Arkouda}},
  year = {2022},
  url       = {},
- doi={},
+ doi={10.1109/HiPC56025.2022.00026},
  abstract = {In graph analytics, a truss is a cohesive subgraph
 based on the number of triangles supporting each edge. It
 is widely used for community detection applications such as
