--- a/content/publication/2022-dzb/cite.bib
+++ b/content/publication/2022-dzb/cite.bib
@@ -6,6 +6,7 @@
  groups = {Edited},
  title = {Parallel Suffix Sorting for Large String Analytics},
  year = {2022},
+ doi = {10.1007/978-3-031-30442-2_6},
  note = {In R. Wyrzykowski et al. (Eds.): PPAM 2022, LNCS 13826, pp. 71–82, 2023.}
 }
 
