--- a/content/publication/2023-dzb/cite.bib
+++ b/content/publication/2023-dzb/cite.bib
@@ -2,9 +2,8 @@
 author = {Zhihui Du and Sen Zhang and David A. Bader},
 title = {Tunnel: Parallel-inducing sort for large string analytics},
 year = {2023},
-volume = {},
-number = {},
-pages = {},
+volume = {149},
+pages = {650--663},
 doi = {10.1016/j.future.2023.08.009},
 abstract = {The suffix array is a crucial data structure for efficient
  string analysis. Over the course of twenty-six years, sequential
