Updated HPEC 2023 papers

--- a/content/publication/2023-b/cite.bib
+++ b/content/publication/2023-b/cite.bib
@@ -5,6 +5,6 @@
  title = {Fast Triangle Counting},
  year = {2023},
  url       = {},
- doi={},
+ doi={10.1109/HPEC58863.2023.10363539},
  abstract = {Listing and counting triangles in graphs is a key algorithmic kernel for network analyses including community detection, clustering coefficients, k-trusses, and triangle centrality. We design and implement a new serial algorithm for triangle counting that performs competitively with the fastest previous approaches on both real and synthetic graphs, such as those from the Graph500 Benchmark and the MIT/Amazon/IEEE Graph Challenge. The experimental results use the recently-launched Intel Xeon Platinum 8480+ and CPU Max 9480 processors.}
 }
