--- a/content/publication/2023-rbdb/cite.bib
+++ b/content/publication/2023-rbdb/cite.bib
@@ -5,6 +5,6 @@ author = {Oliver Alvarado Rodriguez and Fernando Vera Buschmann and Zhihui Du an
  title = {Property Graphs in {Arachne}},
  year = {2023},
  url       = {},
- doi={},
+ doi={10.1109/HPEC58863.2023.10363498},
  abstract = {Analyzing large-scale graphs poses challenges due to their increasing size and the demand for interactive and user-friendly analytics tools. These graphs arise from various domains, including cybersecurity, social sciences, health sciences, and network sciences, where networks can represent interactions between humans, neurons in the brain, or malicious flows in a network. Exploring these large graphs is crucial for revealing hidden structures and metrics that are not easily computable without parallel computing. Currently, Python users can leverage the open-source Arkouda framework to efficiently execute Pandas and NumPy-related tasks on thousands of cores. To address large-scale graph analysis, Arachne, an extension to Arkouda, enables easy transformation of Arkouda dataframes into graphs. This paper proposes and evaluates three distributable data structures for property graphs, implemented in Chapel, that are integrated into Arachne. Enriching Arachne with support for property graphs will empower data scientists to extend their analysis to new problem domains. Property graphs present additional complexities, requiring efficient storage for extra information on vertices and edges, such as labels, relationships, and properties.}
 }
