Updated ACM pub

--- a/content/publication/2024-g/cite.bib
+++ b/content/publication/2024-g/cite.bib
@@ -2,8 +2,11 @@
  author = {Karen Smith Green},
  booktitle = {ACM Inroads},
  groups = {Edited},
- title = {Computational Science Grows Up: The Georgia Tech Example},
+ title = {In an Interdisciplinary World, Computer Science Education Must Adapt},
  year = {2024},
+ volume = {15},
+ number = {4},
+ pages = {67--73},
  url       = {},
  doi={10.1145/3701622},
  abstract = {}
