Added new NJIT post

--- a/content/publication/2021-b/cite.bib
+++ b/content/publication/2021-b/cite.bib
@@ -1,7 +1,7 @@
 @Article{2021-b,
 AUTHOR = {David A. Bader},
 TITLE = {{Linux} and {Supercomputing}: How my passion for building {COTS} systems led to an {HPC} revolution},
-JOURNAL = {IEEE Annals on the History of Computing},
+JOURNAL = {IEEE Annals of the History of Computing},
 VOLUME = {43},
 YEAR = {2021},
 NUMBER = {3},
