Added paper PDF

--- a/content/publication/2024-bpokdb/cite.bib
+++ b/content/publication/2024-bpokdb/cite.bib
@@ -7,6 +7,7 @@
  pages = {},
  address = {Copenhagen, Denmark}, 
  url  = {},
- doi = {},
+ doi = {10.1007/978-981-96-2417-1_8},
  abstract = {This research presents an enhanced Graph Attention Convolutional Neural Network (GAT) tailored for the analysis of open-source package vulnerability remediation. By meticulously examining control flow graphs and implementing node centrality metrics—specifically, degree, norm, and closeness centrality—our methodology identifies and evaluates changes resulting from vulnerability fixes in nodes, thereby predicting the ramifications of dependency upgrades on application workflows. Empirical testing on diverse datasets reveals that our model challenges established paradigms in software security, showcasing its efficacy in delivering comprehensive insights into code vulnerabilities and contributing to advancements in cybersecurity practices. This study delineates a strategic framework for the development of sustainable monitoring systems and the effective remediation of vulnerabilities in open-source software.}
+ notes = {in J. Zhao and W. Meng (Eds.): SciSec 2024, LNCS 15441, pp. 138–157, 2025.}
 }
