Updated HPEC 2024 papers

--- a/content/publication/2024-drbpdb/cite.bib
+++ b/content/publication/2024-drbpdb/cite.bib
@@ -5,6 +5,6 @@
  title = {VF2-PS: Parallel and Scalable Subgraph Monomorphism in Arachne},
  year = {2024},
  url       = {},
- doi={},
+ doi={10.1109/HPEC62836.2024.10938454},
  abstract = {This paper introduces a novel, parallel, and scalable implementation of the VF2 algorithm for subgraph monomorphism developed in the high-productivity language Chapel. Efficient graph analysis in large and complex network datasets is crucial across numerous scientific domains. We address this need through our enhanced VF2 implementation, widely utilized in subgraph matching, and integrating it into Arachne—a Python-accessible, open-source, large-scale graph analysis framework. Leveraging the parallel computing capabilities of modern hardware architectures, our implementation achieves significant performance improvements. Benchmarks on synthetic and real-world datasets, including social, communication, and neuroscience networks, demonstrate speedups of up to 97X on 128 cores, compared to existing Python-based tools like NetworkX and DotMotif, which do not exploit parallelization. Our results on large-scale graphs demonstrate scalability and efficiency, establishing it as a viable tool for subgraph monomorphism, the backbone of numerous graph analytics such as motif counting and enumeration. Arachne, including our VF2 implementation, can be found on GitHub: https://github.com/Bears-R-Us/arkouda-njit.}
 }
