Added new posts

--- a/content/publication/2025-bebtscdJ/cite.bib
+++ b/content/publication/2025-bebtscdJ/cite.bib
@@ -9,6 +9,6 @@
  number = {},
  pages = {},
  url       = {},
- doi={},
+ doi={10.1007/s13278-025-01491-2},
  abstract = {Understanding information flow in the brain can be facilitated by arranging neurons in the fly connectome to form a maximally ``feedforward'' structure. This task is naturally formulated as the Minimum Feedback Arc Set (MFAS)--a well-known NP-hard problem, especially for large-scale graphs. To address this, we propose the Rocket-Crane algorithm, an efficient two-phase method for solving MFAS. In the first phase, we develop a continuous-space optimization method that rapidly generates excellent solutions. In the second phase, we refine these solutions through advanced exploration techniques that integrate randomized and heuristic strategies to effectively escape local minima.  Extensive experiments demonstrate that Rocket-Crane outperforms state-of-the-art methods in terms of solution quality, scalability, and computational efficiency. On the primary benchmark--the fly connectome--our method achieved a feedforward arc set with a total forward weight of 35,459,266 (about 85\%), the highest among all competing methods. The algorithm is open-source and available on GitHub.}
 }
