--- a/content/publication/2025-bebtscdJ/cite.bib
+++ b/content/publication/2025-bebtscdJ/cite.bib
@@ -5,8 +5,8 @@
  groups = {Edited},
  title = {Rocket-Crane Algorithm for the Feedback Arc Set Problem},
  year = {2025},
- volume = {},
- number = {},
+ volume = {15},
+ number = {68},
  pages = {},
  url       = {},
  doi={10.1007/s13278-025-01491-2},
